--- a/lib/app_web/templates/section/show.html.eex
+++ b/lib/app_web/templates/section/show.html.eex
@@ -6,11 +6,11 @@
     <h2 class="text-2xl">Popular this month</h2>
     <div class="grid max-w-5xl grid-cols-1 gap-6 m-auto sm:grid-cols-2 lg:grid-cols-3">
       <%= for item <- @section.top_items do %>
-        <div class="p-4 text-left">
-          <h3 class="mb-2 text-lg font-semibold text-center"><%= item.name %></h3>
-          <p><%= raw(item.summary) %></p>
-          <p class="mt-1 text-sm"><%= "#{item.likes} likes" %></p>
-        </div>
+      <div class="p-4 text-left">
+        <h3 class="mb-2 text-lg font-semibold text-center"><%= item.name %></h3>
+        <p><%= raw(item.summary) %></p>
+        <p class="mt-1 text-sm"><%= "#{item.likes} likes" %></p>
+      </div>
       <% end %>
     </div>
   </div>
@@ -19,11 +19,11 @@
     <h2 class="text-2xl">What's new</h2>
     <div class="grid max-w-5xl grid-cols-1 gap-6 m-auto sm:grid-cols-2 lg:grid-cols-3">
       <%= for item <- @section.latest_items do %>
-        <div class="p-4 text-left">
-          <h3 class="mb-2 text-lg font-semibold text-center"><%= item.name %></h3>
-          <%= truncated_info(item) %>
-          <p class="mt-1 text-sm"><%= "#{item.likes} likes" %></p>
-        </div>
+      <div class="p-4 text-left">
+        <h3 class="mb-2 text-lg font-semibold text-center"><%= item.name %></h3>
+        <%= truncated_info(item) %>
+        <p class="mt-1 text-sm"><%= "#{item.likes} likes" %></p>
+      </div>
       <% end %>
     </div>
   </div>
@@ -32,16 +32,18 @@
     <h2 class="text-2xl">More in English</h2>
     <div class="grid max-w-5xl grid-cols-1 gap-6 m-auto sm:grid-cols-2 lg:grid-cols-3">
       <%= for category <- @categories do %>
-        <div class="p-4">
-          <h3 class="text-lg font-semibold"><%= category.name %></h3>
-          <p class="mb-4"><%= category.items_count %> items</p>
-          <i>Popular in this category</i>
-          <ul>
-            <%= for item <- category.items do %>
-              <li><%= item.name %> (<%= item.likes %> likes)</li>
-            <% end %>
-          </ul>
-        </div>
+      <div class="p-4">
+        <h3 class="text-lg font-semibold underline">
+          <%= link category.name, to: Routes.section_category_path(@conn, :show, @section.slug, category.slug) %>
+        </h3>
+        <p class="mb-4"><%= category.items_count %> items</p>
+        <i>Popular in this category</i>
+        <ul>
+          <%= for item <- category.items do %>
+          <li><%= item.name %> (<%= item.likes %> likes)</li>
+          <% end %>
+        </ul>
+      </div>
       <% end %>
     </div>
   </div>
