--- a/lib/app_web/templates/section/show_live.html.leex
+++ b/lib/app_web/templates/section/show_live.html.leex
@@ -2,7 +2,7 @@
   <div class="flex flex-col w-full max-w-5xl mx-auto">
     <div class="flex-grow xl:px-8 lg:flex">
       <div class="px-4 lg:pl-0 flex-1 min-w-0 py-6">
-        <h1>
+        <h1 class="text-3xl">
           <%= "Best #{if is_nil(@category), do: "Resources", else: @category.name} to learn #{@section.name}" %>
         </h1>
         <p><%= @section.summary %></p>
