--- a/lib/app_web/templates/section/show_live.html.leex
+++ b/lib/app_web/templates/section/show_live.html.leex
@@ -1,13 +1,19 @@
-<div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+<div class="px-4 mx-auto max-w-7xl sm:px-6 lg:px-8">
   <div class="flex flex-col w-full max-w-5xl mx-auto">
     <div class="flex-grow xl:px-8 lg:flex">
-      <div class="px-4 lg:pl-0 flex-1 min-w-0 py-6">
+      <div class="flex-1 min-w-0 px-4 py-6 lg:pl-0">
         <h1 class="text-3xl">
           <%= "Best #{if is_nil(@category), do: "Resources", else: @category.name} to learn #{@section.name}" %>
         </h1>
         <p><%= @section.summary %></p>
 
-        <div class="mt-8 space-y-6">
+        <div class="flex mt-8">
+          <%= live_patch "Top", to: sort_items_path(@socket, @section, @category, "top"), class: "inline-block rounded-lg font-medium leading-none py-2 px-3 focus:outline-none #{ sort_active_classes(@sort_by, :top)}" %>
+          <%= live_patch "New", to: sort_items_path(@socket, @section, @category, "new"), class: "ml-2 inline-block rounded-lg font-medium leading-none py-2 px-3 focus:outline-none #{ sort_active_classes(@sort_by, :new)}" %>
+        </div>
+
+        <%# Items %>
+        <div class="mt-4 space-y-6">
           <%= for item <- @items do %>
             <div>
               <h3 class="font-semibold"><%= item.name %></h3>
@@ -18,7 +24,7 @@
                   (Free Trial)
                 <% end %>
               </p>
-              <p class="mt-2 text-gray-600 text-sm">
+              <p class="mt-2 text-sm text-gray-600">
                 Added <%= Timex.format!(item.inserted_at, "%F", :strftime) %>
               </p>
               <p class="mt-2 italic"><%= "#{item.likes} likes" %></p>
@@ -27,7 +33,7 @@
         </div>
       </div>
 
-      <div class="px-4 lg:flex-shrink-0 lg:border-l lg:border-gray-200 xl:pr-0 space-y-8 py-6">
+      <div class="px-4 py-6 space-y-8 lg:flex-shrink-0 lg:border-l lg:border-gray-200 xl:pr-0">
         <div>
           <h2 class="text-xl">Categories</h2>
           <ul>
