--- a/lib/app_web/templates/layout/root.html.leex
+++ b/lib/app_web/templates/layout/root.html.leex
@@ -15,7 +15,7 @@
     <script defer phx-track-static type="text/javascript" src="<%= Routes.static_path(@conn, "/js/app.js") %>"></script>
   </head>
   <body>
-    <%= render "header.html", conn: @conn, section: @section %>
+    <%= render "header.html", conn: @conn, section: assigns[:section] %>
     <%= @inner_content %>
   </body>
 </html>
