--- a/lib/app_web/templates/layout/_user_menu.html.eex
+++ b/lib/app_web/templates/layout/_user_menu.html.eex
@@ -1,10 +1,11 @@
-<ul>
-<%= if @current_user do %>
-  <li><%= @current_user.email %></li>
-  <li><%= link "Settings", to: Routes.auth_user_settings_path(@conn, :edit) %></li>
-  <li><%= link "Log out", to: Routes.auth_user_session_path(@conn, :delete), method: :delete %></li>
+<ul class="flex space-x-6 pt-6 pr-12 justify-end">
+<%= if User.guest?(@current_user) do %>
+  <li>Guest</li>
+  <li><%= link "Register", to: Routes.auth_user_registration_path(@conn, :new), class: "underline" %></li>
+  <li><%= link "Log in", to: Routes.auth_user_session_path(@conn, :new), class: "underline" %></li>
 <% else %>
-  <li><%= link "Register", to: Routes.auth_user_registration_path(@conn, :new) %></li>
-  <li><%= link "Log in", to: Routes.auth_user_session_path(@conn, :new) %></li>
+  <li><%= @current_user.email %></li>
+  <li><%= link "Settings", to: Routes.auth_user_settings_path(@conn, :edit), class: "underline" %></li>
+  <li><%= link "Log out", to: Routes.auth_user_session_path(@conn, :delete), method: :delete, class: "underline" %></li>
 <% end %>
 </ul>
