Add users management to the admin panel

--- a/lib/app_web/templates/auth/user_settings/edit.html.eex
+++ b/lib/app_web/templates/auth/user_settings/edit.html.eex
@@ -1,6 +1,6 @@
-<h1>Settings</h1>
+<h1 class="text-2xl font-semibold">Settings</h1>
 
-<h3>Change email</h3>
+<h3 class="text-lg font-semibold">Change email</h3>
 
 <%= form_for @email_changeset, Routes.auth_user_settings_path(@conn, :update_email), fn f -> %>
   <%= if @email_changeset.action do %>
@@ -9,20 +9,36 @@
     </div>
   <% end %>
 
-  <%= label f, :email %>
-  <%= email_input f, :email, required: true %>
-  <%= error_tag f, :email %>
-
-  <%= label f, :current_password, for: "current_password_for_email" %>
-  <%= password_input f, :current_password, required: true, name: "current_password", id: "current_password_for_email" %>
-  <%= error_tag f, :current_password %>
+  <div>
+    <%= label f, :email %>
+    <%= email_input f, :email, required: true %>
+    <%= error_tag f, :email %>
+  </div>
 
   <div>
-    <%= submit "Change email" %>
+    <%= label f, :name %>
+    <%= text_input f, :name %>
+    <%= error_tag f, :name %>
+  </div>
+
+  <div>
+    <%= label f, :username %>
+    <%= text_input f, :username, required: true %>
+    <%= error_tag f, :username %>
+  </div>
+
+  <div>
+    <%= label f, :current_password, for: "current_password_for_email" %>
+    <%= password_input f, :current_password, required: true, name: "current_password", id: "current_password_for_email" %>
+    <%= error_tag f, :current_password %>
+  </div>
+
+  <div>
+    <%= submit "Save" %>
   </div>
 <% end %>
 
-<h3>Change password</h3>
+<h3 class="mt-4 text-lg font-semibold">Change password</h3>
 
 <%= form_for @password_changeset, Routes.auth_user_settings_path(@conn, :update_password), fn f -> %>
   <%= if @password_changeset.action do %>
