--- a/lib/app_web/templates/section/show_live.html.leex
+++ b/lib/app_web/templates/section/show_live.html.leex
@@ -1,4 +1,4 @@
-<div class="px-4 mx-auto bg-cool-gray-50 max-w-7xl sm:px-6 lg:px-8">
+<div class="px-4 mx-auto mb-20 bg-cool-gray-50 max-w-7xl sm:px-6 lg:px-8">
   <div class="flex flex-col w-full max-w-5xl mx-auto">
     <div class="flex-grow xl:px-8 lg:flex">
       <div class="flex-1 min-w-0 px-4 py-6 lg:pl-0">
