Save likes if user is logged in

--- a/lib/app_web/templates/layout/header.html.eex
+++ b/lib/app_web/templates/layout/header.html.eex
@@ -27,6 +27,7 @@
 
         <div
           x-show="isOpen"
+          x-cloak
           @click.away="isOpen = false"
           x-transition:enter="transition ease-out duration-100"
           x-transition:enter-start="transform opacity-0 scale-95"
