Add tests for like/unlike feature

--- a/lib/app_web/templates/section/item_component.html.leex
+++ b/lib/app_web/templates/section/item_component.html.leex
@@ -1,4 +1,4 @@
-<div>
+<div id='<%= "item-#{@item.id}" %>'>
   <h3 class="font-semibold"><%= @item.name %></h3>
   <p><%= raw(@item.summary) %></p>
   <p class="mt-2 text-sm leading-5">
