--- a/lib/app_web/templates/section/item_component.html.leex
+++ b/lib/app_web/templates/section/item_component.html.leex
@@ -1,43 +1,47 @@
-<div id='<%= "item-#{@item.id}" %>'>
-  <h3 class="font-semibold"><%= @item.name %></h3>
-  <p><%= raw(@item.summary) %></p>
-  <p class="mt-2 text-sm leading-5">
-    <span class="px-2 py-1 font-medium text-green-800 bg-green-100 rounded"><%= @item.license |> to_string() |> String.capitalize() %></span>
-    <%= if @item.has_trial do %>
-      (Free Trial)
-    <% end %>
-  </p>
-  <p class="mt-2 text-sm text-gray-600">
-    Added <%= Timex.format!(@item.inserted_at, "%F", :strftime) %>
-  </p>
+<div id='<%= "item-#{@item.id}" %>' class="flex items-start space-x-4 lg:space-x-6">
+  <%= img_tag(logo_url(@item, :thumb), class: "flex-none w-16 h-16 lg:w-20 lg:h-20", alt: " logo", width: "80", height: "80") %>
 
-  <span class="inline-flex mt-2 rounded-md shadow-sm">
+  <div class="flex-1">
+    <h3 class="font-semibold"><%= @item.name %></h3>
+    <p><%= raw(@item.summary) %></p>
+    <p class="mt-2 text-sm leading-5">
+      <span class="px-2 py-1 font-medium text-green-800 bg-green-100 rounded"><%= @item.license |> to_string() |> String.capitalize() %></span>
+      <%= if @item.has_trial do %>
+        (Free Trial)
+      <% end %>
+    </p>
+    <p class="mt-2 text-sm text-gray-600">
+      Added <%= Timex.format!(@item.inserted_at, "%F", :strftime) %>
+    </p>
+  </div>
+
+  <div class="flex-none w-16 h-16 lg:w-20 lg:h-20">
     <%= if @item.liked do %>
       <button
         phx-click="unlike"
         phx-target="<%= @myself %>"
         type="button"
-        class="inline-flex items-center px-3 py-2 text-sm font-medium leading-5 text-white transition duration-100 ease-in-out bg-indigo-600 border border-transparent rounded-md hover:bg-indigo-500 focus:outline-none focus:border-indigo-700 focus:shadow-outline-indigo active:bg-indigo-700"
+        class="flex flex-col items-center justify-center w-16 h-16 space-y-1 text-indigo-700 transition duration-100 ease-in-out bg-indigo-100 border border-transparent rounded-md lg:w-20 lg:h-20 hover:bg-indigo-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500"
       >
         <!-- Heroicon name: heart -->
-        <svg class="w-5 h-5 mr-2 -ml-1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
+        <svg class="w-5 h-5 lg:w-6 lg:h-6" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
           <path fill-rule="evenodd" d="M3.172 5.172a4 4 0 015.656 0L10 6.343l1.172-1.171a4 4 0 115.656 5.656L10 17.657l-6.828-6.829a4 4 0 010-5.656z" clip-rule="evenodd" />
         </svg>
-        <%= @item.likes %>
+        <div class="text-sm font-medium leading-5 lg:text-base"><%= @item.likes %></div>
       </button>
     <% else %>
       <button
         phx-click="like"
         phx-target="<%= @myself %>"
         type="button"
-        class="inline-flex items-center px-3 py-2 text-sm font-medium leading-4 text-gray-700 transition duration-100 ease-in-out bg-white border border-gray-300 rounded-md hover:text-gray-500 focus:outline-none focus:border-blue-300 focus:shadow-outline-blue active:text-gray-800 active:bg-gray-50"
+        class="flex flex-col items-center justify-center w-16 h-16 space-y-1 text-gray-400 transition duration-100 ease-in-out bg-white border border-gray-300 rounded-md hover:text-gray-700 lg:w-20 lg:h-20 hover:text-gray-500 hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 active:text-gray-800 active:bg-gray-50"
       >
         <!-- Heroicon name: heart -->
-        <svg  class="w-5 h-5 mr-2 -ml-1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
+        <svg class="w-5 h-5 lg:w-6 lg:h-6" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
           <path fill-rule="evenodd" d="M3.172 5.172a4 4 0 015.656 0L10 6.343l1.172-1.171a4 4 0 115.656 5.656L10 17.657l-6.828-6.829a4 4 0 010-5.656z" clip-rule="evenodd" />
         </svg>
-        <%= @item.likes %>
+        <div class="text-sm font-medium leading-5 text-gray-700 lg:text-base"><%= @item.likes %></div>
       </button>
     <% end %>
-  </span>
+  </div>
 </div>
