Show icon for item external link

--- a/lib/app_web/templates/section/item_component.html.leex
+++ b/lib/app_web/templates/section/item_component.html.leex
@@ -1,18 +1,40 @@
-<div id='<%= "item-#{@item.id}" %>' class="flex items-start space-x-4 lg:space-x-6">
+<div
+  id='<%= "item-#{@item.id}" %>'
+  class="flex items-start p-4 space-x-4 rounded-md lg:space-x-6 hover:bg-gray-50"
+  x-data="{ isLinkHidden: true }"
+  x-on:mouseenter="isLinkHidden = false; console.log('show')"
+  x-on:mouseleave="isLinkHidden = true"
+>
   <%= img_tag(logo_url(@item, :thumb), class: "flex-none w-16 h-16 lg:w-20 lg:h-20", alt: " logo", width: "80", height: "80") %>
 
   <div class="flex-1">
-    <h3 class="font-semibold"><%= @item.name %></h3>
-    <p><%= raw(@item.summary) %></p>
+    <div class="flex items-baseline">
+      <h3 class="text-lg font-medium leading-7 text-gray-900"><%= @item.name %></h3>
+      <a
+        href="/r/<%= @item.slug %>/away"
+        x-show="!isLinkHidden"
+        x-cloak
+        class="inline-block ml-2 text-gray-500 hover:text-gray-900"
+        rel="noopener"
+        target="_blank"
+      >
+        <svg class="w-5 h-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
+          <path d="M11 3a1 1 0 100 2h2.586l-6.293 6.293a1 1 0 101.414 1.414L15 6.414V9a1 1 0 102 0V4a1 1 0 00-1-1h-5z" />
+          <path d="M5 5a2 2 0 00-2 2v8a2 2 0 002 2h8a2 2 0 002-2v-3a1 1 0 10-2 0v3H5V7h3a1 1 0 000-2H5z" />
+        </svg>
+      </a>
+    </div>
+
+    <div class="prose-sm text-gray-500"><%= raw(@item.summary) %></div>
     <p class="mt-2 text-sm leading-5">
       <span class="px-2 py-1 font-medium text-green-800 bg-green-100 rounded"><%= @item.license |> to_string() |> String.capitalize() %></span>
       <%= if @item.has_trial do %>
         (Free Trial)
       <% end %>
     </p>
-    <p class="mt-2 text-sm text-gray-600">
+    <!-- p class="mt-2 text-sm text-gray-600">
       Added <%= Timex.format!(@item.inserted_at, "%F", :strftime) %>
-    </p>
+    </p -->
   </div>
 
   <div class="flex-none w-16 h-16 lg:w-20 lg:h-20">
