--- a/lib/app_web/templates/section/section_live.html.leex
+++ b/lib/app_web/templates/section/section_live.html.leex
@@ -1,6 +1,6 @@
-<div class="px-4 mx-auto mb-20 bg-cool-gray-50 max-w-7xl sm:px-6 lg:px-8">
+<div class="px-2 mx-auto mb-20 bg-cool-gray-50 max-w-7xl lg:px-6">
   <div class="flex flex-col w-full max-w-5xl mx-auto">
-    <div class="flex-grow xl:px-8 lg:flex">
+    <div class="flex-grow lg:flex">
       <div class="flex-1 min-w-0 px-4 py-6 lg:pl-0">
         <h1 class="text-4xl font-bold leading-10 text-cool-gray-900">
           <%= "Best #{if is_nil(@category), do: "Resources", else: @category.name} to learn #{@section.name}" %>
