--- a/lib/app_web/templates/layout/root.html.leex
+++ b/lib/app_web/templates/layout/root.html.leex
@@ -7,6 +7,7 @@
 
     <%= csrf_meta_tag() %>
     <%= live_title_tag assigns[:page_title] || "#{Map.get(assigns[:section] || %{}, :name)} #{Map.get(assigns[:category] || %{}, :name)}", suffix: " – Learn Hub" %>
+    <meta name="description" content="Best resources to learn English">
 
     <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
     <link phx-track-static rel="stylesheet" href="<%= Routes.static_path(@conn, "/css/app.css") %>"/>
@@ -15,7 +16,7 @@
     <script defer phx-track-static type="text/javascript" src="<%= Routes.static_path(@conn, "/js/app.js") %>"></script>
     <script async defer data-domain="howtolearn.link" src="https://plausible.io/js/plausible.js"></script>
   </head>
-  <body>
+  <body class="bg-gray-100">
     <%= render "_user_menu.html", assigns %>
     <%= render "header.html", conn: @conn, section: assigns[:section] %>
     <%= @inner_content %>
