--- a/lib/app_web/templates/section/item_component.html.leex
+++ b/lib/app_web/templates/section/item_component.html.leex
@@ -1,6 +1,6 @@
 <div
   id='<%= "item-#{@item.id}" %>'
-  class="flex items-start p-4 space-x-4 rounded-md lg:space-x-6 hover:bg-gray-50"
+  class="flex items-start px-4 py-5 space-x-4 bg-white border-b border-gray-200 rounded-md lg:rounded-lg lg:space-x-6 sm:px-6 hover:bg-gray-50"
   x-data="{ isLinkHidden: true }"
   x-on:mouseenter="isLinkHidden = false; console.log('show')"
   x-on:mouseleave="isLinkHidden = true"
@@ -9,13 +9,13 @@
     <picture>
       <source type="image/webp" srcset="<%= logo_url(@item, :thumb_webp) %>">
       <source type="image/png" srcset="<%= logo_url(@item, :thumb) %>">
-      <img src="<%= logo_url(@item, :thumb) %>" alt="<%= @item.name %> logo">
+      <img src="<%= logo_url(@item, :thumb) %>" alt="<%= @item.name %> logo" width="80" height="80">
     </picture>
   </div>
 
   <div class="flex-1">
     <div class="flex items-baseline">
-      <h3 class="text-lg font-medium leading-7 text-gray-900"><%= @item.name %></h3>
+      <h2 class="text-lg font-medium leading-7 text-gray-900"><%= @item.name %></h2>
       <a
         href="/r/<%= @item.slug %>/away"
         x-show="!isLinkHidden"
@@ -49,7 +49,7 @@
         phx-click="unlike"
         phx-target="<%= @myself %>"
         type="button"
-        class="flex flex-col items-center justify-center w-16 h-16 space-y-1 text-indigo-700 transition duration-100 ease-in-out bg-indigo-100 border border-transparent rounded-md lg:w-20 lg:h-20 hover:bg-indigo-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500"
+        class="flex flex-col items-center justify-center w-16 h-16 space-y-1 text-indigo-700 transition duration-100 ease-in-out border border-indigo-700 rounded-md lg:w-20 lg:h-20 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-700"
       >
         <!-- Heroicon name: heart -->
         <svg class="w-5 h-5 lg:w-6 lg:h-6" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
@@ -62,7 +62,7 @@
         phx-click="like"
         phx-target="<%= @myself %>"
         type="button"
-        class="flex flex-col items-center justify-center w-16 h-16 space-y-1 text-gray-400 transition duration-100 ease-in-out bg-white border border-gray-300 rounded-md hover:text-gray-700 lg:w-20 lg:h-20 hover:text-gray-500 hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 active:text-gray-800 active:bg-gray-50"
+        class="flex flex-col items-center justify-center w-16 h-16 space-y-1 text-gray-500 transition duration-100 ease-in-out bg-white border border-gray-200 rounded-md hover:text-gray-700 lg:w-20 lg:h-20 hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-700 active:text-gray-700 active:bg-gray-50"
       >
         <!-- Heroicon name: heart -->
         <svg class="w-5 h-5 lg:w-6 lg:h-6" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
