--- a/lib/app_web/templates/layout/root.html.leex
+++ b/lib/app_web/templates/layout/root.html.leex
@@ -16,9 +16,8 @@
     <script defer phx-track-static type="text/javascript" src="<%= Routes.static_path(@conn, "/js/app.js") %>"></script>
     <script async defer data-domain="howtolearn.link" src="https://plausible.io/js/plausible.js"></script>
   </head>
-  <body class="bg-gray-100">
-    <%= render "_user_menu.html", assigns %>
-    <%= render "header.html", conn: @conn, section: assigns[:section] %>
+  <body class="bg-light-blue-50">
+    <%= render "header.html", conn: @conn, section: assigns[:section], current_user: assigns[:current_user] %>
     <%= @inner_content %>
   </body>
 </html>
