--- a/lib/app_web/templates/layout/root.html.leex
+++ b/lib/app_web/templates/layout/root.html.leex
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
     <%= csrf_meta_tag() %>
-    <%= live_title_tag assigns[:page_title] || "#{Map.get(assigns[:section] || %{}, :name)} #{Map.get(assigns[:category] || %{}, :name)}", suffix: " – Learn Hub" %>
+    <%= live_title_tag assigns[:page_title] || "#{Map.get(assigns[:section] || %{}, :name)} #{Map.get(assigns[:category] || %{}, :name)}", suffix: " – How To Learn" %>
     <meta name="description" content="Best resources to learn English">
 
     <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
