--- a/lib/app_web/templates/layout/_user_menu.html.eex
+++ b/lib/app_web/templates/layout/_user_menu.html.eex
@@ -1,4 +1,4 @@
-<ul class="flex items-center self-end justify-between h-10 space-x-8 tracking-wide">
+<ul class="flex items-center self-end justify-between h-10 space-x-8 overflow-x-hidden tracking-wide">
 <%= if @current_user do %>
   <li class="font-semibold"><%= @current_user.name || @current_user.email %></li>
   <li><%= link "Settings", to: Routes.auth_user_settings_path(@conn, :edit) %></li>
