--- a/lib/app_web/templates/auth/user_settings/edit.html.eex
+++ b/lib/app_web/templates/auth/user_settings/edit.html.eex
@@ -2,12 +2,14 @@
 
 <h3 class="text-lg font-semibold">Change email</h3>
 
-<%= form_for @email_changeset, Routes.auth_user_settings_path(@conn, :update_email), fn f -> %>
+<%= form_for @email_changeset, Routes.auth_user_settings_path(@conn, :update), fn f -> %>
   <%= if @email_changeset.action do %>
     <div class="alert alert-danger">
       <p>Oops, something went wrong! Please check the errors below.</p>
     </div>
   <% end %>
+
+  <%= hidden_input f, :action, name: "action", value: "update_email" %>
 
   <div>
     <%= label f, :email %>
@@ -40,12 +42,14 @@
 
 <h3 class="mt-4 text-lg font-semibold">Change password</h3>
 
-<%= form_for @password_changeset, Routes.auth_user_settings_path(@conn, :update_password), fn f -> %>
+<%= form_for @password_changeset, Routes.auth_user_settings_path(@conn, :update), fn f -> %>
   <%= if @password_changeset.action do %>
     <div class="alert alert-danger">
       <p>Oops, something went wrong! Please check the errors below.</p>
     </div>
   <% end %>
+
+  <%= hidden_input f, :action, name: "action", value: "update_password" %>
 
   <%= label f, :password, "New password" %>
   <%= password_input f, :password, required: true %>
