--- a/lib/app_web/templates/layout/root.html.leex
+++ b/lib/app_web/templates/layout/root.html.leex
@@ -17,7 +17,8 @@
     <script async defer data-domain="howtolearn.link" src="https://plausible.io/js/plausible.js"></script>
   </head>
   <body class="bg-light-blue-50">
-    <%= render "header.html", conn: @conn, section: assigns[:section], current_user: assigns[:current_user] %>
+    <%= render "_header.html", conn: @conn, section: assigns[:section], current_user: assigns[:current_user] %>
     <%= @inner_content %>
+    <%= render "_footer.html", conn: @conn %>
   </body>
 </html>
