--- a/lib/app_web/templates/layout/root.html.leex
+++ b/lib/app_web/templates/layout/root.html.leex
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
     <%= csrf_meta_tag() %>
-    <%= live_title_tag assigns[:page_title] || "#{Map.get(assigns[:section] || %{}, :name)} #{Map.get(assigns[:category] || %{}, :name)}", suffix: " – How To Learn" %>
+    <%= live_title_tag assigns[:page_title] || "#{Map.get(assigns[:skill] || %{}, :name)} #{Map.get(assigns[:category] || %{}, :name)}", suffix: " – How To Learn" %>
     <meta name="description" content="Best resources to learn English">
 
     <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
@@ -17,7 +17,7 @@
     <script async defer data-domain="howtolearn.link" src="https://plausible.io/js/plausible.js"></script>
   </head>
   <body class="bg-light-blue-50">
-    <%= render "_header.html", conn: @conn, section: assigns[:section], current_user: assigns[:current_user] %>
+    <%= render "_header.html", conn: @conn, skill: assigns[:skill], current_user: assigns[:current_user] %>
     <%= @inner_content %>
     <%= render "_footer.html", conn: @conn %>
   </body>
