--- a/lib/app_web/templates/home/index.html.eex
+++ b/lib/app_web/templates/home/index.html.eex
@@ -1,16 +1,19 @@
 <div class="">
-  <section class="max-w-4xl pt-16 mx-auto md:text-center md:pt-20">
+  <section class="max-w-4xl pt-16 mx-auto text-center md:pt-20">
     <div class="px-6 md:px-8">
       <h1 class="mb-6 text-4xl font-bold leading-10 tracking-tight text-gray-800 md:font-extrabold md:mb-5 md:text-5xl">Curated collections of learning resources</h1>
-      <p class="text-lg leading-7 text-gray-900 md:text-2xl">Explore them all...</p>
+      <p class="text-xl leading-7 text-gray-900 md:text-2xl">Explore them all...</p>
     </div>
   </section>
 
-  <section class="pb-16 mt-12 bg-light-blue-50 md:pb-20">
-    <div class="grid justify-center max-w-4xl gap-4 px-6 mx-auto text-gray-900 md:px-8 grid-cols-repeat-40 md:grid-cols-repeat-48">
+  <section class="px-6 pb-16 mt-12 bg-light-blue-50 md:pb-20 md:px-8">
+    <div class="flex justify-start gap-4 overflow-x-scroll text-gray-900 md:gap-6 md:grid md:justify-center md:max-w-4xl md:mx-auto md:grid-cols-repeat-48">
       <%= for skill <- @skills do %>
-        <%= link to: Routes.live_path(@conn, AppWeb.SkillLive, skill.slug), class: "col-span-1 flex flex-col items-center justify-end w-40 md:w-48 p-4 border border-gray-300 rounded-md h-60" do %>
-          <div class="text-lg font-semibold"><%= skill.name %></div>
+        <%= link to: Routes.live_path(@conn, AppWeb.SkillLive, skill.slug), class: "min-w-max flex flex-col items-center justify-end p-4 shadow rounded-md h-60 bg-white focus:outline-none focus:ring-2 focus:ring-offset-light-blue-50 ring-offset-2 focus:ring-light-blue-400" do %>
+          <div class="flex w-32 overflow-hidden transition duration-500 ease-in-out transform hover:scale-105 md:w-40">
+            <%= render SkillView, "_item_logo.html", item: skill, width: 160, height: 160 %>
+          </div>
+          <div class="mt-1 text-lg font-semibold"><%= skill.name %></div>
           <div class="text-sm"><%= skill.items_count %> resources</div>
         <% end %>
       <% end %>
@@ -27,7 +30,7 @@
             </h2>
             <div class="">
               <%= link to: Routes.live_path(@conn, AppWeb.SkillLive, "all", category.slug), class: "text-base font-medium leading-none text-gray-700 hover:text-light-blue-600 py-2 px-3" do %>
-                Browse All (<%= category.items_count %>)<span class="inline-block ml-1 font-normal transition-transform transform duration-350 hover:translate-x-3 text-light-blue-600">--></span>
+                Browse All (<%= category.items_count %>)<span class="inline-block ml-1 font-normal transition-transform duration-500 transform hover:translate-x-2 text-light-blue-600">--></span>
               <% end %>
             </div>
           </div>
@@ -36,7 +39,7 @@
           <div class="grid grid-cols-2 pt-2 gap-y-4 gap-x-8 sm:grid-cols-3 md:grid-cols-4">
             <%= for item <- category.items do %>
               <div class="flex flex-col">
-                <div class="flex items-center overflow-hidden rounded-md">
+                <div class="flex items-center overflow-hidden transition-shadow ease-in-out rounded-md shadow duration-350 hover:shadow-md">
                   <div style="padding-bottom: 100%;"></div>
                   <%= render SkillView, "_item_logo.html", item: item, width: 256, height: 256 %>
                 </div>
