--- a/lib/app_web/templates/home/index.html.eex
+++ b/lib/app_web/templates/home/index.html.eex
@@ -6,44 +6,45 @@
     </div>
   </section>
 
-  <section class="px-6 pb-16 mt-12 bg-light-blue-50 md:pb-20 md:px-8">
+  <section class="px-6 pb-16 mt-12 bg-light-blue-50 md:px-8">
     <div class="flex justify-start gap-4 overflow-x-scroll text-gray-900 md:gap-6 md:grid md:justify-center md:max-w-4xl md:mx-auto md:grid-cols-repeat-48">
       <%= for skill <- @skills do %>
         <%= link to: Routes.live_path(@conn, AppWeb.SkillLive, skill.slug), class: "min-w-max flex flex-col items-center justify-end p-4 shadow rounded-md h-60 bg-white focus:outline-none focus:ring-2 focus:ring-offset-light-blue-50 ring-offset-2 focus:ring-light-blue-400" do %>
           <div class="flex w-32 overflow-hidden transition duration-500 ease-in-out transform hover:scale-105 md:w-40">
             <%= render SkillView, "_item_logo.html", item: skill, width: 160, height: 160 %>
           </div>
-          <div class="mt-1 text-lg font-semibold"><%= skill.name %></div>
+          <div class="mt-2 text-lg font-semibold leading-tight"><%= skill.name %></div>
           <div class="text-sm"><%= skill.items_count %> resources</div>
         <% end %>
       <% end %>
     </div>
   </section>
 
-  <section class="py-16 bg-white md:py-20">
-    <div class="max-w-3xl px-6 mx-auto space-y-10 md:space-y-14 md:px-8">
+  <section class="py-16 bg-white">
+    <div class="max-w-3xl px-6 mx-auto space-y-6 md:space-y-10 md:px-8">
       <%= for category <- @categories do %>
         <div class="">
           <div class="flex items-center justify-between py-4">
-            <h2 class="text-2xl font-semibold leading-none text-gray-900">
-              <%= category.name %>
-            </h2>
+            <h2 class="text-lg font-semibold leading-none text-gray-900 md:text-xl lg:text-2xl"><%= category.name %></h2>
             <div class="">
-              <%= link to: Routes.live_path(@conn, AppWeb.SkillLive, "all", category.slug), class: "text-base font-medium leading-none text-gray-700 hover:text-light-blue-600 py-2 px-3" do %>
-                Browse All (<%= category.items_count %>)<span class="inline-block ml-1 font-normal transition-transform duration-500 transform hover:translate-x-2 text-light-blue-600">--></span>
+              <%= link to: Routes.live_path(@conn, AppWeb.SkillLive, "all", category.slug), class: "text-sm font-medium leading-none text-gray-700 hover:text-light-blue-600 p-2" do %>
+                Browse All<span class="inline-block ml-1 transition-transform duration-500 transform hover:translate-x-2 text-light-blue-600">-></span>
               <% end %>
             </div>
           </div>
 
-          <!-- Items Grid -->
-          <div class="grid grid-cols-2 pt-2 gap-y-4 gap-x-8 sm:grid-cols-3 md:grid-cols-4">
+          <!-- Items -->
+          <div class="flex justify-start overflow-x-scroll sm:overflow-x-visible sm:grid sm:grid-cols-5 gap-y-4 gap-x-3 sm:gap-x-4">
             <%= for item <- category.items do %>
-              <div class="flex flex-col">
-                <div class="flex items-center overflow-hidden transition-shadow ease-in-out rounded-md shadow duration-350 hover:shadow-md">
+              <div class="flex flex-col min-w-max">
+                <div class="flex items-center w-24 mb-3 overflow-hidden transition-shadow ease-in-out rounded-md shadow sm:w-28 md:w-32 duration-350 hover:shadow-md">
                   <div style="padding-bottom: 100%;"></div>
                   <%= render SkillView, "_item_logo.html", item: item, width: 256, height: 256 %>
                 </div>
-                <div class="mt-3 overflow-x-hidden text-base font-medium leading-tight text-gray-700 truncate-2-lines overflow-ellipsis"><%= item.name %></div>
+                <div class="text-xs tracking-wide text-gray-500 uppercase">
+                  <%= link item.skill.name, to: Routes.live_path(@conn, AppWeb.SkillLive, item.skill.slug), class: "hover:text-gray-600" %>
+                </div>
+                <div class="w-24 mt-1 overflow-x-hidden text-xs font-medium text-gray-700 sm:w-28 md:w-32 sm:text-sm truncate-2-lines overflow-ellipsis"><%= item.name %></div>
               </div>
             <% end %>
           </div>
