--- a/lib/app_web/templates/home/index.html.eex
+++ b/lib/app_web/templates/home/index.html.eex
@@ -6,8 +6,8 @@
     </div>
   </section>
 
-  <section class="px-6 pb-16 mt-12 bg-light-blue-50 md:px-8">
-    <div class="flex justify-start gap-4 overflow-x-scroll text-gray-900 md:gap-6 md:grid md:justify-center md:max-w-4xl md:mx-auto md:grid-cols-repeat-48">
+  <section class="pb-16 mt-12 bg-light-blue-50">
+    <div class="flex justify-start gap-4 py-2 pl-6 overflow-x-scroll text-gray-900 md:gap-6 md:grid md:justify-center md:max-w-4xl md:mx-auto md:grid-cols-repeat-48 md:pl-0 after:empty-content md-after-none after:pr-2 md:after:pr-0">
       <%= for skill <- @skills do %>
         <%= link to: Routes.live_path(@conn, AppWeb.SkillLive, skill.slug), class: "min-w-max flex flex-col items-center justify-end p-4 shadow rounded-md h-60 bg-white focus:outline-none focus:ring-2 focus:ring-offset-light-blue-50 ring-offset-2 focus:ring-light-blue-400" do %>
           <div class="flex w-32 overflow-hidden transition duration-500 ease-in-out transform hover:scale-105 md:w-40">
@@ -28,7 +28,7 @@
             <h2 class="text-lg font-semibold leading-none text-gray-900 md:text-xl lg:text-2xl"><%= category.name %></h2>
             <div class="">
               <%= link to: Routes.live_path(@conn, AppWeb.SkillLive, "all", category.slug), class: "text-sm font-medium leading-none text-gray-700 hover:text-light-blue-600 p-2" do %>
-                Browse All<span class="inline-block ml-1 transition-transform duration-500 transform hover:translate-x-2 text-light-blue-600">-></span>
+                Browse All<span class="inline-block ml-1 transition-transform duration-500 transform hover:translate-x-2 text-light-blue-600">--></span>
               <% end %>
             </div>
           </div>
@@ -44,7 +44,7 @@
                 <div class="text-xs tracking-wide text-gray-500 uppercase">
                   <%= link item.skill.name, to: Routes.live_path(@conn, AppWeb.SkillLive, item.skill.slug), class: "hover:text-gray-600" %>
                 </div>
-                <div class="w-24 mt-1 overflow-x-hidden text-xs font-medium text-gray-700 sm:w-28 md:w-32 sm:text-sm truncate-2-lines overflow-ellipsis"><%= item.name %></div>
+                <div class="w-24 mt-1 overflow-x-hidden text-sm font-medium text-gray-700 sm:w-28 md:w-32 truncate-2-lines overflow-ellipsis"><%= item.name %></div>
               </div>
             <% end %>
           </div>
