--- a/lib/app_web/templates/skill/item_component.html.leex
+++ b/lib/app_web/templates/skill/item_component.html.leex
@@ -1,33 +1,26 @@
 <div
   id='<%= "item-#{@item.id}" %>'
-  class="flex items-center px-4 py-5 space-x-4 bg-white border-b border-gray-200 rounded-md sm:rounded-lg sm:space-x-6 sm:px-6 hover:bg-gray-50"
-  x-data="{ isLinkHidden: true }"
-  x-on:mouseenter="isLinkHidden = false"
-  x-on:mouseleave="isLinkHidden = true"
+  class="flex items-center px-4 py-5 space-x-4 bg-white border-b border-gray-200 rounded-md cursor-pointer sm:rounded-lg sm:space-x-6 sm:px-6 hover:bg-gray-50 group"
 >
   <div class="flex-none w-16 sm:w-20">
     <%= render "_item_logo.html", item: @item, width: 80, height: 80 %>
   </div>
 
   <div class="self-start flex-1">
-    <div class="">
-      <h2 class="pt-1 text-lg font-medium leading-6 text-gray-900 sm:leading-7">
-        <%= @item.name %>
-        <a
-            href="/r/<%= @item.slug %>/away"
-            x-show="!isLinkHidden"
-            x-cloak
-            class="inline-block -mt-2 text-gray-500 align-middle hover:text-gray-900"
-            rel="noopener"
-            target="_blank"
-          >
-          <!-- Heroicon name: external-link -->
-          <svg class="w-5 h-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
-            <path d="M11 3a1 1 0 100 2h2.586l-6.293 6.293a1 1 0 101.414 1.414L15 6.414V9a1 1 0 102 0V4a1 1 0 00-1-1h-5z" />
-            <path d="M5 5a2 2 0 00-2 2v8a2 2 0 002 2h8a2 2 0 002-2v-3a1 1 0 10-2 0v3H5V7h3a1 1 0 000-2H5z" />
-          </svg>
-        </a>
-      </h2>
+    <div class="flex items-center">
+      <h2 class="pt-1 text-lg font-semibold leading-6 text-gray-900 sm:leading-7"><%= @item.name %></h2>
+      <a
+        href="/r/<%= @item.slug %>/away"
+        class="hidden ml-1 -mt-2 text-gray-500 opacity-0 sm:inline-block hover:text-gray-900 group-hover:opacity-100"
+        rel="noopener"
+        target="_blank"
+      >
+        <!-- Heroicon name: external-link -->
+        <svg class="w-5 h-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
+          <path d="M11 3a1 1 0 100 2h2.586l-6.293 6.293a1 1 0 101.414 1.414L15 6.414V9a1 1 0 102 0V4a1 1 0 00-1-1h-5z" />
+          <path d="M5 5a2 2 0 00-2 2v8a2 2 0 002 2h8a2 2 0 002-2v-3a1 1 0 10-2 0v3H5V7h3a1 1 0 000-2H5z" />
+        </svg>
+      </a>
     </div>
 
     <div class="prose-sm text-gray-500 truncate-2-lines"><%= raw(@item.summary) %></div>
