--- a/lib/app_web/templates/home/index.html.eex
+++ b/lib/app_web/templates/home/index.html.eex
@@ -2,15 +2,15 @@
   <section class="max-w-4xl pt-16 mx-auto text-center md:pt-20">
     <div class="px-6 md:px-8">
       <h1 class="mb-6 text-4xl font-bold leading-10 tracking-tight text-gray-800 md:font-extrabold md:mb-5 md:text-5xl">Curated collections of learning resources</h1>
-      <p class="text-xl leading-7 text-gray-900 md:text-2xl">Explore them all...</p>
+      <p class="text-lg leading-7 text-gray-900 md:text-xl">Explore them all...</p>
     </div>
   </section>
 
-  <section class="pb-16 mt-12 bg-light-blue-50">
-    <div class="flex justify-start gap-4 py-2 pl-6 overflow-x-scroll text-gray-900 md:gap-6 md:grid md:justify-center md:max-w-4xl md:mx-auto md:grid-cols-repeat-48 md:pl-0 after:empty-content md-after-none after:pr-2 md:after:pr-0">
+  <section class="pb-16 mt-10 bg-light-blue-50">
+    <div class="flex justify-start gap-4 pt-1 pb-3 pl-6 overflow-x-scroll text-gray-900 md:gap-6 md:grid md:justify-center md:max-w-4xl md:mx-auto md:grid-cols-repeat-48 md:pl-0 after:empty-content md-after-none after:pr-2 md:after:pr-0">
       <%= for skill <- @skills do %>
-        <%= link to: Routes.live_path(@conn, AppWeb.SkillLive, skill.slug), class: "min-w-max flex flex-col items-center justify-end p-4 shadow rounded-md h-60 bg-white focus:outline-none focus:ring-2 focus:ring-offset-light-blue-50 ring-offset-2 focus:ring-light-blue-400" do %>
-          <div class="flex w-32 overflow-hidden transition duration-500 ease-in-out transform hover:scale-105 md:w-40">
+        <%= link to: Routes.live_path(@conn, AppWeb.SkillLive, skill.slug), class: "min-w-max flex flex-col items-center justify-end p-4 shadow rounded-md h-60 bg-white focus:outline-none focus:ring-2 focus:ring-offset-light-blue-50 ring-offset-2 focus:ring-light-blue-400 group" do %>
+          <div class="flex w-32 overflow-hidden transition duration-500 ease-in-out transform group-hover:scale-105 md:w-40">
             <%= render SkillView, "_item_logo.html", item: skill, width: 160, height: 160 %>
           </div>
           <div class="mt-2 text-lg font-semibold leading-tight"><%= skill.name %></div>
@@ -21,30 +21,31 @@
   </section>
 
   <section class="py-16 bg-white">
-    <div class="max-w-3xl px-6 mx-auto space-y-6 md:space-y-10 md:px-8">
+    <div class="max-w-3xl mx-auto space-y-6 md:space-y-10">
       <%= for category <- @categories do %>
         <div class="">
-          <div class="flex items-center justify-between py-4">
+          <div class="flex items-center justify-between px-6 py-4 md:px-8">
             <h2 class="text-lg font-semibold leading-none text-gray-900 md:text-xl lg:text-2xl"><%= category.name %></h2>
             <div class="">
-              <%= link to: Routes.live_path(@conn, AppWeb.SkillLive, "all", category.slug), class: "text-sm font-medium leading-none text-gray-700 hover:text-light-blue-600 p-2" do %>
-                Browse All<span class="inline-block ml-1 transition-transform duration-500 transform hover:translate-x-2 text-light-blue-600">--></span>
+              <%= link to: Routes.live_path(@conn, AppWeb.SkillLive, "all", category.slug), class: "text-sm font-medium leading-none text-gray-700 hover:text-light-blue-600 p-2 group" do %>
+                <div class="inline-block">Browse All</div>
+                <div class="inline-block transition-transform duration-300 transform group-hover:translate-x-1">--></div>
               <% end %>
             </div>
           </div>
 
           <!-- Items -->
-          <div class="flex justify-start overflow-x-scroll sm:overflow-x-visible sm:grid sm:grid-cols-5 gap-y-4 gap-x-3 sm:gap-x-4">
+          <div class="flex justify-start pb-2 pl-6 overflow-x-scroll md:px-8 sm:overflow-x-visible sm:grid sm:grid-cols-5 gap-y-4 gap-x-3 sm:gap-x-4 sm:pr-6 after:empty-content after:pr-3 sm:after:pr-0 sm-after-none">
             <%= for item <- category.items do %>
               <div class="flex flex-col min-w-max">
-                <div class="flex items-center w-24 mb-3 overflow-hidden transition-shadow ease-in-out rounded-md shadow sm:w-28 md:w-32 duration-350 hover:shadow-md">
+                <div class="flex items-center w-24 mb-3 overflow-hidden transition-shadow ease-in-out rounded-md shadow cursor-pointer sm:w-28 md:w-32 duration-350 hover:shadow-md">
                   <div style="padding-bottom: 100%;"></div>
                   <%= render SkillView, "_item_logo.html", item: item, width: 256, height: 256 %>
                 </div>
                 <div class="text-xs tracking-wide text-gray-500 uppercase">
                   <%= link item.skill.name, to: Routes.live_path(@conn, AppWeb.SkillLive, item.skill.slug), class: "hover:text-gray-600" %>
                 </div>
-                <div class="w-24 mt-1 overflow-x-hidden text-sm font-medium text-gray-700 sm:w-28 md:w-32 truncate-2-lines overflow-ellipsis"><%= item.name %></div>
+                <div class="w-24 mt-1 overflow-x-hidden text-sm font-medium text-gray-700 cursor-pointer sm:w-28 md:w-32 truncate-2-lines overflow-ellipsis"><%= item.name %></div>
               </div>
             <% end %>
           </div>
